@@ -3,7 +3,6 @@
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
    <meta http-equiv="Content-Language" content="en-us">
-   <meta name="GENERATOR" content="Mozilla/4.76 [en] (X11; U; Linux 2.2.18 i686) [Netscape]">
    <title>PVCS task</title>
 </head>
 <body>
@@ -132,6 +131,35 @@ tag expects the executables to be found using the PATH environment variable.</td
 <td VALIGN=TOP WIDTH="10%">No</td>
 </tr>
 </table>
+<h3><a name="nested">Nested Elements</a></h3>
+
+<h3>pvcsproject element</h3>
+<p><code>pvcs</code> supports a nested
+<code>&lt;pvcsproject&gt;</code> element, that represents a project
+within the PVCS repository to extract files from.  By nesting multiple
+<code>&lt;pvcsproject&gt;</code> elements under the
+<code>&lt;pvcs&gt;</code> task, multiple projects can be
+specified.</p>
+
+<h3>Parameters</h3>
+
+<table BORDER CELLSPACING=0 CELLPADDING=2 >
+<tr>
+<td VALIGN=TOP WIDTH="12%"><b>Attribute</b></td>
+
+<td VALIGN=TOP WIDTH="78%"><b>Description</b></td>
+
+<td VALIGN=TOP WIDTH="10%"><b>Required</b></td>
+</tr>
+
+<tr>
+<td VALIGN=TOP WIDTH="12%">name</td>
+
+<td VALIGN=TOP WIDTH="78%">The name of the pvcs project</td>
+
+<td VALIGN=TOP WIDTH="10%">Yes</td>
+</tr>
+</table>
 
 <h3>
 Examples</h3>
@@ -143,7 +171,7 @@ repository.
 -->
 <br>&nbsp;&nbsp;&nbsp; &lt;!-- ===================================================================
 -->
-<br>&nbsp;&nbsp;&nbsp; &lt;target name="getlastes">
+<br>&nbsp;&nbsp;&nbsp; &lt;target name="getlatest">
 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt; pvcs repository="/mnt/pvcs"
 pvcsproject="/myprj"/>
 <br>&nbsp;&nbsp;&nbsp; &lt;/target></ul>
@@ -163,6 +191,39 @@ Now run:
 &nbsp;&nbsp;&nbsp; BUILD SUCCESSFUL
 
 &nbsp;&nbsp;&nbsp; Total time: 19 seconds</pre>
+
+This next example extracts the latest version of the files in the pvcs
+repository from two projects using nested &lt;pvcsproject&gt; elements.
+<ul>&nbsp;&nbsp;&nbsp; &lt;!-- ===================================================================
+-->
+<br>&nbsp;&nbsp;&nbsp; &lt;!-- Get latest from myprj and myprj2&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+-->
+<br>&nbsp;&nbsp;&nbsp; &lt;!-- ===================================================================
+-->
+<br>&nbsp;&nbsp;&nbsp; &lt;target name="getlatest2">
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;pvcs repository="/mnt/pvcs">
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;pvcsproject name="/myprj" />
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;pvcsproject name="/myprj2" />
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &lt;/pvcs>
+<br>&nbsp;&nbsp;&nbsp; &lt;/target></ul>
+Now run:
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ant getlatest2
+<p>This will cause the following output to appear:
+<pre>&nbsp;&nbsp;&nbsp; getlatest2:
+&nbsp;&nbsp;&nbsp;&nbsp; [pvcs] PVCS Version Manager (VMGUI) v6.6.10 (Build 870) for Windows NT/80x86
+&nbsp;&nbsp;&nbsp;&nbsp; [pvcs] Copyright 1985-2000 MERANT.&nbsp; All rights reserved.
+&nbsp;&nbsp;&nbsp;&nbsp; [pvcs] PVCS Version Manager (get) v6.6.10 (Build 870) for Windows NT/80x86
+&nbsp;&nbsp;&nbsp;&nbsp; [pvcs] Copyright 1985-2000 MERANT.&nbsp; All rights reserved.
+&nbsp;&nbsp;&nbsp;&nbsp; [pvcs] c:\myws\myprj\main.java &lt;- C:\mypvcs\archives\myprj\main.java-arc
+&nbsp;&nbsp;&nbsp;&nbsp; [pvcs] rev 1.1
+&nbsp;&nbsp;&nbsp;&nbsp; [pvcs] c:\myws\myprj\apache\tool.java &lt;- C:\mypvcs\archives\myprj\apache\tool.java-arc
+&nbsp;&nbsp;&nbsp;&nbsp; [pvcs] rev 1.5
+&nbsp;&nbsp;&nbsp;&nbsp; [pvcs] c:\myws\myprj2\apache\tool2.java &lt;- C:\mypvcs\archives\myprj2\apache\tool2.java-arc
+&nbsp;&nbsp;&nbsp;&nbsp; [pvcs] rev 1.2
+
+&nbsp;&nbsp;&nbsp; BUILD SUCCESSFUL
+
+&nbsp;&nbsp;&nbsp; Total time: 22 seconds</pre>
 
 <pre>
 </pre>
